--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,37 +8,36 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-			rel="stylesheet"
-		/>
-		<!-- HTML Meta Tags -->
-<title>Milderz - Frontend Developer</title>
-<meta name="description" content="Astro description">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- HTML Meta Tags -->
+    <title>Milderz - Frontend Developer</title>
+    <meta name="description" content="Astro description" />
 
-<!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://milderz.com/">
-<meta property="og:type" content="website">
-<meta property="og:title" content="Milderz - Frontend Developer">
-<meta property="og:description" content="Astro description">
-<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/850dfb2f-b322-4812-9c2e-19198c9a908f.png?token=vVlpgsepB9vwekdpnJ2fVWEzlloWYtXyCILCcW3Rslw&height=729&width=1200&expires=33282557955">
+    <meta property="og:url" content="https://www.milderz.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Milder Navarro - Frontend Developer" />
+    <meta
+      property="og:description"
+      content="As a frontend developer, I specialize in creating modern websites and apps that assist businesses in gaining an advantage over their competitors by creating fast and reliable websites."
+    />
+    <meta property="og:image" content="https://www.milderz.com/ogimage.PNG" />
+    <meta property="og:locale" content="en_EN" />
+    <meta
+      property="og:site_name"
+      content="Milderz - Frontend developer />
 
-<!-- Twitter Meta Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="milderz.com">
-<meta property="twitter:url" content="https://milderz.com/">
-<meta name="twitter:title" content="Milderz - Frontend Developer">
-<meta name="twitter:description" content="Astro description">
-<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/850dfb2f-b322-4812-9c2e-19198c9a908f.png?token=vVlpgsepB9vwekdpnJ2fVWEzlloWYtXyCILCcW3Rslw&height=729&width=1200&expires=33282557955">
 
-<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+ 
 		
 	</head>
 	<body>
@@ -69,56 +68,88 @@ const { title } = Astro.props;
 	}
 
 	body {
-		font-family: "Inter", serif;
-		font-optical-sizing: auto;
-		font-weight: 300;
-		font-style: normal;
-		color: var(--white-text);
-		background-color: #0E0E0E;
-	}
-
-	h1,
-	h2,
-	h3,
-	h4,
-	h5 {
-		color: var(--white);
-	}
-
-	li {
-		list-style: none;
-	}
-
-	a {
-		text-decoration: none;
-		color: #1d1d1d;
-	}
-	p {
-		font-size: 1.8rem;
+		font-family: "
+      Inter",
+      serif;
+      font-optical-sizing:
+      auto;
+      font-weight:
+      300;
+      font-style:
+      normal;
+      color:
+      var(--white-text);
+      background-color:
+      #0E0E0E;
+      }
+      h1,
+      h2,
+      h3,
+      h4,
+      h5
+      {color: var(--white);}
+      li
+      {list-style: none;}
+      a
+      {text-decoration: none;
+		color: #1d1d1d;}
+      p
+      {font-size: 1.8rem;
 		font-weight: 400;
-		color: #C2C2C2;
-	}
-
-	/* Estilo general para el scrollbar */
-::-webkit-scrollbar {
-  width: 12px; /* Ancho del scrollbar */
-  height: 12px; /* Altura para scrollbars horizontales */
-}
-
-/* Color y estilo del track (fondo del scrollbar) */
-::-webkit-scrollbar-track {
-  background: var(--black-bg); /* Color del fondo */
-  border-radius: 10px; /* Opcional: bordes  */
-}
-
-/* Color y estilo del thumb (la parte deslizante del scrollbar) */
-::-webkit-scrollbar-thumb {
-  background: var(--accent); /* Color del thumb */
-  border-radius: 10px; /* Bordes redondeados */
-}
-
-/* Cambiar el color del thumb al pasar el mouse */
-::-webkit-scrollbar-thumb:hover {
-  background: #000000; /* Color al hacer hover */
-}
-</style>
+		color: #C2C2C2;}
+      *
+      Estilo
+      general
+      para
+      el
+      scrollbar
+      *
+      ::-webkit-scrollbar
+      {width: 12px; /* Ancho del scrollbar */
+  height: 12px; /* Altura para scrollbars horizontales */}
+      *
+      Color
+      y
+      estilo
+      del
+      track
+      (fondo
+      del
+      scrollbar)
+      *
+      ::-webkit-scrollbar-track
+      {background: var(--black-bg); /* Color del fondo */
+  border-radius: 10px; /* Opcional: bordes  */}
+      *
+      Color
+      y
+      estilo
+      del
+      thumb
+      (la
+      parte
+      deslizante
+      del
+      scrollbar)
+      *
+      ::-webkit-scrollbar-thumb
+      {background: var(--accent); /* Color del thumb */
+  border-radius: 10px; /* Bordes redondeados */}
+      *
+      Cambiar
+      el
+      color
+      del
+      thumb
+      al
+      pasar
+      el
+      mouse
+      *
+      ::-webkit-scrollbar-thumb:hover
+      {background: #000000; /* Color al hacer hover */}
+      <
+      style
+    />
+  </head>
+</html>
