--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -137,6 +137,11 @@ import Gmail from "../../public/gmail.svg";
 
       a {
         color: var(--white-text);
+        width: 100%;
+        height: 100%;
+        display: grid;
+
+        place-items: center;
        
       }
     }
