--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -38,7 +38,11 @@ import Gmail from "../../public/gmail.svg";
         flex-direction: column;
         align-items: center;
         gap: 2.4rem;
-        padding: 16rem 0 8rem 0;
+        padding: 12rem 0 8rem 0;
+        @media screen and (max-width: 460px) {
+            
+            clip-path: polygon(0% 8%, 100% 0%, 100% 100%, 0% 100%);
+        }
        
     }
     .contact-title {
