--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -18,7 +18,8 @@ const { btnText, color } = Astro.props;
 
     .main-btn:hover {
         background-color: var(--accent-hover);
-        transform: scale(1.075);
+        /* transform: scale(1.075); */
+        transform: translateY(-0.25rem);
     }
 
 </style>
