--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -106,7 +106,7 @@ import Gmail from "../../public/gmail.svg";
       display: grid;
       place-items: center;
       border-radius: 0.5rem;
-      transition: all ease 0.2s;
+      transition: background-color ease 0.2s;
 
       &:hover {
         color: var(--accent);
