--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,122 +1,144 @@
 ---
 const { projectImage, projectTitle, cardDescription } = Astro.props;
+import ArrowUpRight from "../../public/arrow-up-right.svg";
 ---
 
-<a href="#" class="project-card">
-    <img
-        class="project-card-img"
-        src="https://milderz.netlify.app/photo-snap.webp"
-        alt=""
-        srcset=""
-        width="305px"
-        height="209px"
-    />
+<article class="project-card">
+  <img
+    class="project-card-img"
+    src="https://milderz.netlify.app/photo-snap.webp"
+    alt=""
+    srcset=""
+    width="305px"
+    height="209px"
+  />
 
-    <div class="project-card-content">
-        <h2 class="project-card-title">{projectTitle}</h2>
-        <p class="project-card-description">
-            The all-in-one subscription starter kit for high-performance SaaS
-            applications, powered by Stripe, Supabase, and Vercel.
-        </p>
-        
-        
-    </div>
-    <footer class="project-card-footer">
-        <p class="project-card-link">SEE PROJECT<p/>
-    </footer>
+  <div class="project-card-content">
+    <h2 class="project-card-title">{projectTitle}</h2>
+    <p class="project-card-description">
+      The all-in-one subscription starter kit for high-performance SaaS
+      applications, powered by Stripe, Supabase, and Vercel.
+    </p>
+  </div>
+  <footer class="project-card-footer">
+    <a href="#" class="project-card-link"
+      >SEE PROJECT
+
+    </a>
+     <ArrowUpRight class="project-card-link-icon" height={15} width={15} />
     <div class="project-card-tags">
-        <span class="project-card-tag">REACT JS</span>
-        <span class="project-card-tag">ASTRO</span>
-        <span class="project-card-tag">NEXT JS</span>
+      <span class="project-card-tag">REACT JS</span>
+      <span class="project-card-tag">ASTRO</span>
+      <span class="project-card-tag">NEXT JS</span>
     </div>
-</a>
+  </footer>
 
-<style>
+  <style>
     .project-card {
-        height: 43.3rem;
-        /* width: 34.5rem; */
-        border: 1px solid #666666;
-        padding: 2rem;
-        border-radius: 0.5rem;
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        color: var(--white-text);
-        transition: all 0.2s ease;
-        
-        background-color: var(--black-bg);
-        
+      height: 43.3rem;
+      border: 1px solid transparent;
+      padding: 2rem;
+      border-radius: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      color: var(--white-text);
+      transition: all 0.2s ease;
+
+      background-color: var(--black-bg);
     }
 
     .project-card:hover {
-        /* transform: scale(1.050); */
-        border: 1px solid var(--accent);
+      border: 1px solid var(--accent);
+      transform: translateY(-0.5rem);
     }
 
+
+
     .project-card-img {
-        border-radius: 0.5rem;
-        flex: 1;
-        filter: brightness(0.6);
-        transition: all 0.2s ease;
-        width: 100%;
-        background-position: center;
-        background-size: cover;
-        object-fit: cover;
-        object-position: center;
+      border-radius: 0.5rem;
+      flex: 1;
+      filter: brightness(0.6);
+      transition: all 0.2s ease;
+      width: 100%;
+      background-position: center;
+      background-size: cover;
+      object-fit: cover;
+      object-position: center;
     }
 
     .project-card-content {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        gap: 1.4rem;
-        padding-top: 2rem;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 1.4rem;
+      padding-top: 2rem;
     }
 
     .project-card-title {
-        font-size: 1.8rem;
+      font-size: 1.8rem;
     }
     .project-card-description {
-        font-size: 1.4rem;
-        font-weight: 400;
-        
+      font-size: 1.4rem;
+      font-weight: 400;
     }
     .project-card-footer {
-        flex: 1;
-        display: flex;
-        align-items: end;
+      flex: 1;
+      display: flex;
+      align-items: end;
+      gap: 0.4rem;
     }
 
     .project-card-link {
-        color: var(--accent);
-        font-size: 1.4rem;
-        font-weight: 700;
-        
+      color: var(--white-text);
+      font-size: 1.2rem;
+      font-weight: 400;
     }
+
+    .project-card-link:hover {
+      text-decoration: underline;
+      transition: all 0.2s ease;
+    }
+    .project-card-link-icon {
+      transform: translateY(-0.1rem);
+      filter: brightness(0.4);
+      transform-origin: bottom left;
+      transition: all 0.2s ease;
+    }
+    .project-card-link:hover + .project-card-link-icon {
+      margin-left: 0.2rem;
+      filter: brightness(1);
+    }
+
     .project-card-tags {
-        position: absolute;
-        top: 3rem;
-        left: 3rem;
-        
-        opacity: 0;
-        transition: all 0.2s ease;
+      position: absolute;
+      top: 3rem;
+      left: 3rem;
+
+      opacity: 0;
+      transition: all 0.2s ease;
     }
     .project-card:hover .project-card-tags {
-        opacity: 1;
-        
+      opacity: 1;
     }
 
     .project-card:hover .project-card-img {
-        filter: brightness(1);
-        
+      filter: brightness(1);
     }
 
-    .project-card-tag{
-        background-color: var(--gray-bg);
-        padding: 4px 8px;
-        border-radius: 0.5rem;
-        font-size: 1.2rem;
-        font-weight: 600;
-        color: var(--accent);
+    .project-card-tag {
+      background-color: var(--gray-bg);
+      padding: 4px 8px;
+      border-radius: 0.5rem;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: var(--accent);
     }
-</style>
+
+    .project-card-footer {
+      display: flex;
+      align-items: flex-end;
+      height: 1.667rem;
+    }
+  </style>
+</article>
