--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,23 +44,22 @@ import { projectsItems } from "../projectsData";
 			/>
 			<article class="about-text">
 				<p>
-					As a frontend developer, I specialize in creating modern
-					websites and apps that assist businesses in gaining an
-					advantage over their competitors by creating fast and
-					reliable websites.
+					I'm passionate about building modern, user-friendly websites and technolgy products.
 				</p>
 				<p>
-					My expertise includes working with technologies such as <span
-						>HTML, CSS, Javascript, Astro, Styled Components,</span
+					I like working with technologies like <span
+						>HTML, CSS, Javascript, Astro, Tailwind</span
 					> and <span>React JS</span>.
 				</p>
 				<p>
-					Additionally, I am currently in the process of learning the
-					basics of UX/UI design to complement my coding abilities.
+					I am currently learning backend development with <span
+						>Node.js, Express,</span
+					> and <span>SQL</span>, and I am excited to
+					expand my skill set to become a full-stack developer.
 				</p>
 			</article>
 
-			<Button btnText="Download resume" />
+			
 		</Container>
 
 		<Contact />
