Update hero avatar image source and adjust alignment in hero section

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@ import Button from "./Button.astro";
  </div>
  <div class="hero-col2">
   
-    <img height="459px" class="hero-avatar" src="/milderz-avatar-nobg.png" alt="" srcset="">
+    <img height="389px" class="hero-avatar" src="https://res.cloudinary.com/dtu95r8h9/image/upload/e_background_removal/f_png/v1749396016/milderz-avatar_p7sc6u.png" alt="" srcset="">
  </div>
 </div>
 <style>
@@ -129,6 +129,6 @@ import Button from "./Button.astro";
     .hero-col2 {
         position: relative;
         display: flex;
-        align-items: flex-start;
+        align-items: flex-end;
     }
 </style>
