--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,12 +7,16 @@ import Gmail from "../../public/gmail.svg";
 ---
 
 <header class="main-header">
-  <h1>milderz<span>.</span></h1>
+  <a href="/">
+   <h1>milderz<span>.</span></h1>
+  </a>
+  
   <nav>
     <ul class="links">
-      <li class="link"><a href="#projects">Projects</a></li>
-      <li class="link"><a href="#about">About</a></li>
-      <li class="link"><a href="#contact">Contact</a></li>
+      <li class="link"><a href="/#projects">Projects</a></li>
+      <li class="link"><a href="/#about">About</a></li>
+      <li class="link"><a href="/#contact">Contact</a></li>
+      <li class="link"><a href="/blog">Blog</a></li>
       <!-- <li class="link"><a href="#blog">Blog</a></li> -->
     </ul>
     <ul class="socials">
