Update hero avatar image source for improved loading performance

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@ import Button from "./Button.astro";
  </div>
  <div class="hero-col2">
   
-    <img height="389px" class="hero-avatar" src="https://res.cloudinary.com/dtu95r8h9/image/upload/e_background_removal/f_png/v1749396016/milderz-avatar_p7sc6u.png" alt="" srcset="">
+    <img height="389px" class="hero-avatar" src="https://res.cloudinary.com/webspeedtest/image/upload/c_limit,dpr_1,f_webp,fl_awebp,h_389,q_auto,w_389/v1749497010/ggighisgpderf26si61j.webp" alt="" srcset="">
  </div>
 </div>
 <style>
