--- a/src/components/SectionHeader.astro
+++ b/src/components/SectionHeader.astro
@@ -14,7 +14,7 @@ const { headerTitle, headerSubtitle, titleId } = Astro.props;
         display: flex;
         flex-direction: column;
         gap: 2rem;
-        padding: 7.2rem 0;
+        padding: 7.2rem 0 3.6rem 0;
         @media screen and (max-width: 484px) {
           padding: 4.6rem 0;
           
